# serializer version: 1
# name: test_beneficiary_details
  '''
  <main class="s-main" id="main" role="main">
              <div aria-atomic="true" aria-live="polite" class="toast-container">
  
  </div>
  
              <section class="s-title-02">
                  <div class="s-title-02__container container">
                      <div class="s-title-02__row row">
                          <div class="s-title-02__col col-12">
                              
      
  
  
      <div class="c-prevstep">
          <a aria-label="Retour à la liste" class="btn btn-ico btn-link ps-0" href="/gps/groups/list">
              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium"></i>
              <span>
                  Retour
                  à la liste
              </span>
          </a>
      </div>
  
  
  
                              
      <div class="d-flex flex-column flex-md-row gap-3 justify-content-md-between mb-3 mb-md-4">
          <h1 class="m-0">Jane DOE</h1>
          <div aria-label="Actions sur le bénéficiaire" class="d-flex flex-column flex-md-row gap-3" role="group">
              
              <a aria-label="Ne plus suivre Jane DOE" class="btn btn-lg btn-outline-primary btn-ico" data-bs-body="Vous pourrez toujours suivre ce bénéficiaire de nouveau plus tard." data-bs-confirm-text="Ne plus suivre" data-bs-confirm-url="/gps/groups/[PK of group]/leave" data-bs-target="#confirm_modal" data-bs-title="Êtes-vous sûr de ne plus vouloir suivre Jane DOE ?" data-bs-toggle="modal" href="/gps/details/7614fc4b-aef9-4694-ab17-12324300180a">
                  <i aria-hidden="true" class="ri-user-unfollow-line fw-medium"></i>
                  <span>Ne plus suivre</span>
              </a>
  
              
                  
                  <a aria-label="Ne plus être référent de Jane DOE" class="btn btn-lg btn-primary btn-ico" data-bs-body="Vous pourrez toujours devenir référent de ce bénéficiaire plus tard." data-bs-confirm-text="Ne plus être référent" data-bs-confirm-url="/gps/groups/[PK of group]/toggle_referent" data-bs-target="#confirm_modal" data-bs-title="Êtes-vous sûr de ne plus vouloir être référent de Jane DOE ?" data-bs-toggle="modal" href="/gps/details/7614fc4b-aef9-4694-ab17-12324300180a">
                      <i aria-hidden="true" class="ri-map-pin-user-line fw-medium"></i>
                      <span>Ne plus être référent</span>
                  </a>
              
  
              
          </div>
      </div>
  
                              
                                  
  
  
                              
                              
                          </div>
                      </div>
                  </div>
              </section>
  
              
      <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12" id="beneficiary_details_container">
                      
                      <div class="c-box">
                          <h2>Données administratives</h2>
                          <hr/>
                          <div class="row">
                              <div class="col-12 col-md-6 mb-3 mb-md-0">
                                  <ul class="list-data">
                                      <li>
                                          <small>Prénom</small>
                                          <strong>Jane</strong>
                                      </li>
                                      <li>
                                          <small>Nom</small>
                                          <strong>DOE</strong>
                                      </li>
                                      <li>
                                          <small>Date de naissance</small>
                                          
                                              <strong>01/01/1990</strong>
                                          
                                      </li>
                                      <li>
                                          <small>Adresse e-mail</small>
                                          <strong>jane.doe@test.local</strong>
                                          
                                          <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="jane.doe@test.local" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_email">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                      </li>
                                      <li>
                                          <small>Téléphone</small>
                                          
                                              <strong>06 12 34 56 78</strong>
                                              
                                              <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0612345678" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                          
                                      </li>
                                      <li>
                                          <small>Adresse</small>
                                          
                                              <address>12 rue Georges Bizet, 35000 Rennes</address>
                                          
                                      </li>
                                  </ul>
                              </div>
                              <div class="col-12 col-md-6">
                                  <ul class="list-data">
                                      <li>
                                          <small>Niveau de formation</small>
                                          
                                              <strong>Formation de niveau BAC</strong>
                                          
                                      </li>
                                      
                                      
                                      
                                      
                                      
                                      
                                      
                                      
                                      <li>
                                          <small>Identifiant France Travail (ex Pôle emploi)</small>
  
                                          
                                              <i class="text-disabled">Non renseigné</i>
                                          
                                      </li>
                                      <li>
                                          <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-ailleurs" type="button">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">
                                                          La fonctionnalité est en test dans deux départements et sera bientôt disponible pour votre territoire.
                                                      </p>
                                                  
                                              </div>
                                          </div>
                                      </li>
                                  </ul>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
      
  
  
  
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-12" id="gps_intervenants">
                  <div class="d-flex flex-column flex-md-row gap-3 justify-content-md-between mb-3 mb-md-4">
                      <h2 class="mb-0">Intervenants</h2>
                      <a class="btn btn-ico btn-primary" href="https://formulaires.gps.inclusion.gouv.fr/ajouter-intervenant?user_name=Pierre+DUPONT&amp;user_id=[PK of user]&amp;user_email=pierre.dupont%40test.local&amp;user_organization_name=Les+Olivades&amp;user_organization_id=[PK of organization]&amp;user_type=prescriber&amp;beneficiary_name=Jane+DOE&amp;beneficiary_id=[PK of beneficiary]&amp;beneficiary_email=jane.doe%40test.local&amp;success_url=http%3A%2F%2Ftestserver%2Fgps%2Fdetails%2F7614fc4b-aef9-4694-ab17-12324300180a" id="request-new-participant-link">
                          <i aria-hidden="true" class="ri-user-add-line"></i>
                          <span>Ajouter un intervenant existant</span>
                      </a>
                  </div>
                  <form>
                      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                      
                          <div class="c-box c-box--results has-links-inside my-md-4" id="card-[PK of prescriber]">
                              <div class="c-box--results__header">
                                  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
                                      <p class="fs-sm mb-0 flex-grow-1">
                                          <i aria-hidden="true" class="ri-calendar-line fw-normal me-1"></i>
                                          Membre du groupe de suivi depuis le 21/06/2024
                                      </p>
                                      
                                          <div>
                                              <span class="badge badge-sm rounded-pill bg-accent-03 text-primary">
                                                  <i aria-hidden="true" class="ri-map-pin-user-line"></i>
                                                  Référent⸱e
                                              </span>
                                          </div>
                                      
                                  </div>
                                  <div class="c-box--results__summary">
                                      
                                          <i aria-hidden="true" class="ri-home-smile-line"></i>
                                      
                                      <div>
                                          <h3>Pierre DUPONT</h3>
                                          <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                                              Prescripteur
                                              pour Les Olivades
                                          </div>
                                      </div>
                                  </div>
                              </div>
                              <hr class="m-0"/>
                              <div class="c-box--results__body">
                                  <ul class="list-data list-data__two-column-md">
                                      <li>
                                          <small>Adresse e-mail</small>
                                          
                                              <strong>pierre.dupont@test.local</strong>
  <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="pierre.dupont@test.local" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
  
                                          
                                      </li>
                                      <li>
                                          <small>Téléphone</small>
                                          
                                              
                                                  <strong>0612345678</strong>
  <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0612345678" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
  
                                              
                                          
                                      </li>
                                  </ul>
                              </div>
                          </div>
                      
                          <div class="c-box c-box--results has-links-inside my-md-4" id="card-[PK of participant]">
                              <div class="c-box--results__header">
                                  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
                                      <p class="fs-sm mb-0 flex-grow-1">
                                          <i aria-hidden="true" class="ri-calendar-line fw-normal me-1"></i>
                                          Membre du groupe de suivi depuis le 21/06/2024
                                      </p>
                                      
                                  </div>
                                  <div class="c-box--results__summary">
                                      
                                          <i aria-hidden="true" class="ri-user-line"></i>
                                      
                                      <div>
                                          <h3>François LE FRANÇAIS</h3>
                                          <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                                              Prescripteur
                                              
                                          </div>
                                      </div>
                                  </div>
                              </div>
                              <hr class="m-0"/>
                              <div class="c-box--results__body">
                                  <ul class="list-data list-data__two-column-md">
                                      <li>
                                          <small>Adresse e-mail</small>
                                          
                                              <button class="btn-link btn-ico" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="displayed_member_email" hx-post="/gps/display/[PK of group]/[Public ID of participant]/email" hx-swap="outerHTML" id="email-[PK of participant]">
                                                  <div class="stable-text">
                                                      <i aria-hidden="true" class="ri-mail-line fw-medium"></i>
                                                      <span>Afficher l'email</span>
                                                  </div>
                                                  <div class="loading-text">
                                                      <span aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
                                                      <span>Affichage en cours</span>
                                                  </div>
                                              </button>
                                          
                                      </li>
                                      <li>
                                          <small>Téléphone</small>
                                          
                                              
                                                  <button class="btn-link btn-ico" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="displayed_member_phone" hx-post="/gps/display/[PK of group]/[Public ID of participant]/phone" hx-swap="outerHTML" id="phone-[PK of participant]">
                                                      <div class="stable-text">
                                                          <i aria-hidden="true" class="ri-phone-line fw-medium"></i>
                                                          <span>Afficher le téléphone</span>
                                                      </div>
                                                      <div class="loading-text">
                                                          <span aria-hidden="true" class="spinner-border spinner-border-sm" role="status"></span>
                                                          <span>Affichage en cours</span>
                                                      </div>
                                                  </button>
                                              
                                          
                                      </li>
                                  </ul>
                              </div>
                          </div>
                      
                  </form>
              </div>
          </div>
      </div>
  </section>
  
  
          </main>
  '''
# ---
# name: test_contact_information_display[info_displayed]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-30" type="button">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <ul class="list-unstyled">
                                                          <li>
                                                              <i aria-hidden="true" class="ri-user-line fw-normal me-1"></i>Test MacTest
                                                          </li>
                                                          <li>
                                                              <i aria-hidden="true" class="ri-mail-line fw-normal me-1"></i>
                                                              <a aria-label="Contacter Test MacTest par e-mail" class="text-break text-decoration-none" href="mailto:test.mactest@francetravail.fr">test.mactest@francetravail.fr</a>
                                                              <button class="btn-link fw-medium ms-1" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="test.mactest@francetravail.fr" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="copied_user_phone">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
                                                          </li>
                                                      </ul>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_contact_information_display[info_not_available]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-30" type="button">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">Le conseiller emploi France Travail de ce bénéficiaire n’est pas connu.</p>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_contact_information_display_not_live[preview_displayed]
  '''
  <div class="c-info c-info--secondary" id="advisor-info-details-collapsable">
                                              <button aria-controls="collapseAdvisorInfoDetails" aria-expanded="false" class="c-info__summary collapsed" data-bs-target="#collapseAdvisorInfoDetails" data-bs-toggle="collapse" data-matomo-action="clic" data-matomo-category="gps" data-matomo-event="true" data-matomo-option="coordonnees-conseiller-ailleurs" type="button">
                                                  <span>Voir les coordonnées du
                                                      <br class="d-none d-md-inline"/>
                                                  conseiller emploi France Travail</span>
                                              </button>
                                              <div class="c-info__detail collapse" id="collapseAdvisorInfoDetails">
                                                  
                                                      <p class="mb-0">
                                                          La fonctionnalité est en test dans deux départements et sera bientôt disponible pour votre territoire.
                                                      </p>
                                                  
                                              </div>
                                          </div>
  '''
# ---
# name: test_display_participant_contact_info
  '''
  <div class="c-box c-box--results has-links-inside my-md-4" id="card'[Public ID of target_participant]">
                              <div class="c-box--results__header">
                                  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
                                      <p class="fs-sm mb-0 flex-grow-1">
                                          <i aria-hidden="true" class="ri-calendar-line fw-normal me-1"></i>
                                          Membre du groupe de suivi depuis le 20/01/2025
                                      </p>
                                      
                                  </div>
                                  <div class="c-box--results__summary">
                                      
                                          <i aria-hidden="true" class="ri-user-line"></i>
                                      
                                      <div>
                                          <h3>Jean DUPONT</h3>
                                          <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                                              Prescripteur
                                              
                                          </div>
                                      </div>
                                  </div>
                              </div>
                              <hr class="m-0"/>
                              <div class="c-box--results__body">
                                  <ul class="list-data list-data__two-column-md">
                                      <li>
                                          <small>Adresse e-mail</small>
                                          
                                              <strong>jean@dupont.fr</strong>
  <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="jean@dupont.fr">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
  
                                          
                                      </li>
                                      <li>
                                          <small>Téléphone</small>
                                          
                                              
                                                  <strong>0123456789</strong>
  <button class="btn-link" data-bs-placement="top" data-bs-title="Copié !" data-bs-toggle="tooltip" data-bs-trigger="manual" data-it-clipboard-button="copy" data-it-copy-to-clipboard="0123456789">
      <i aria-hidden="true" class="ri-file-copy-line fw-normal"></i>
      <span class="visually-hidden">Copier</span>
  </button>
  
  
                                              
                                          
                                      </li>
                                  </ul>
                              </div>
                          </div>
  '''
# ---
# name: test_group_list
  dict({
    'num_queries': 14,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescribermembership"."id",
                 "prescribers_prescribermembership"."user_id",
                 "prescribers_prescribermembership"."joined_at",
                 "prescribers_prescribermembership"."is_admin",
                 "prescribers_prescribermembership"."is_active",
                 "prescribers_prescribermembership"."created_at",
                 "prescribers_prescribermembership"."updated_at",
                 "prescribers_prescribermembership"."organization_id",
                 "prescribers_prescribermembership"."updated_by_id",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."is_head_office",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."is_authorized",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id"
          FROM "prescribers_prescribermembership"
          INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
          WHERE ("prescribers_prescribermembership"."user_id" = %s
                 AND "prescribers_prescribermembership"."is_active")
          ORDER BY "prescribers_prescribermembership"."created_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'MembershipsFiltersForm._get_beneficiary_choices[www/gps/forms.py]',
          'MembershipsFiltersForm.__init__[www/gps/forms.py]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "users_user"
          WHERE "users_user"."id" IN
              (SELECT U2."beneficiary_id"
               FROM "gps_followupgroupmembership" U0
               INNER JOIN "gps_followupgroup" U2 ON (U0."follow_up_group_id" = U2."id")
               LEFT OUTER JOIN "gps_followupgroupmembership" U3 ON (U2."id" = U3."follow_up_group_id")
               WHERE (U0."member_id" = %s
                      AND U0."ended_at" IS NULL
                      AND U0."is_active")
               GROUP BY U0."id",
                        U2."beneficiary_id")
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouPaginator.count[<site-packages>/django/core/paginator.py]',
          'pager[utils/pagination.py]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT COUNT(*)
          FROM
            (SELECT "gps_followupgroupmembership"."id" AS "col1"
             FROM "gps_followupgroupmembership"
             INNER JOIN "gps_followupgroup" ON ("gps_followupgroupmembership"."follow_up_group_id" = "gps_followupgroup"."id")
             LEFT OUTER JOIN "gps_followupgroupmembership" T4 ON ("gps_followupgroup"."id" = T4."follow_up_group_id")
             WHERE ("gps_followupgroupmembership"."member_id" = %s
                    AND "gps_followupgroupmembership"."ended_at" IS NULL
                    AND "gps_followupgroupmembership"."is_active")
             GROUP BY 1) subquery
        ''',
      }),
      dict({
        'origin': list([
          'User.is_prescriber_with_authorized_org[users/models.py]',
          'IfNode[layout/_header_help_dropdown_content.html]',
          'IfNode[layout/_header_help_dropdown_content.html]',
          'IncludeNode[layout/_header_authenticated.html]',
          'IncludeNode[layout/base.html]',
          'IfNode[layout/base.html]',
          'ExtendsNode[gps/group_list.html]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "prescribers_prescribermembership"
          INNER JOIN "users_user" ON ("prescribers_prescribermembership"."user_id" = "users_user"."id")
          INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
          WHERE ("prescribers_prescribermembership"."user_id" = %s
                 AND "prescribers_prescribermembership"."is_active"
                 AND "prescribers_prescriberorganization"."is_authorized"
                 AND "users_user"."is_active")
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[gps/includes/memberships_results.html]',
          'IncludeNode[gps/group_list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[gps/group_list.html]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "gps_followupgroupmembership"."id",
                 "gps_followupgroupmembership"."is_referent",
                 "gps_followupgroupmembership"."is_active",
                 "gps_followupgroupmembership"."created_at",
                 "gps_followupgroupmembership"."created_in_bulk",
                 "gps_followupgroupmembership"."last_contact_at",
                 "gps_followupgroupmembership"."ended_at",
                 "gps_followupgroupmembership"."updated_at",
                 "gps_followupgroupmembership"."follow_up_group_id",
                 "gps_followupgroupmembership"."member_id",
                 "gps_followupgroupmembership"."creator_id",
                 COUNT(T4."member_id") AS "nb_members",
                 "gps_followupgroup"."id",
                 "gps_followupgroup"."created_at",
                 "gps_followupgroup"."created_in_bulk",
                 "gps_followupgroup"."updated_at",
                 "gps_followupgroup"."beneficiary_id",
                 T6."id",
                 T6."password",
                 T6."last_login",
                 T6."is_superuser",
                 T6."username",
                 T6."first_name",
                 T6."last_name",
                 T6."is_staff",
                 T6."is_active",
                 T6."date_joined",
                 T6."address_line_1",
                 T6."address_line_2",
                 T6."post_code",
                 T6."city",
                 T6."department",
                 T6."coords",
                 T6."geocoding_score",
                 T6."geocoding_updated_at",
                 T6."ban_api_resolved_address",
                 T6."insee_city_id",
                 T6."title",
                 T6."full_name_search_vector",
                 T6."email",
                 T6."phone",
                 T6."kind",
                 T6."identity_provider",
                 T6."has_completed_welcoming_tour",
                 T6."created_by_id",
                 T6."external_data_source_history",
                 T6."last_checked_at",
                 T6."public_id",
                 T6."address_filled_at",
                 T6."first_login",
                 "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "gps_followupgroupmembership"
          INNER JOIN "users_user" ON ("gps_followupgroupmembership"."member_id" = "users_user"."id")
          INNER JOIN "gps_followupgroup" ON ("gps_followupgroupmembership"."follow_up_group_id" = "gps_followupgroup"."id")
          LEFT OUTER JOIN "gps_followupgroupmembership" T4 ON ("gps_followupgroup"."id" = T4."follow_up_group_id")
          INNER JOIN "users_user" T6 ON ("gps_followupgroup"."beneficiary_id" = T6."id")
          WHERE ("gps_followupgroupmembership"."member_id" = %s
                 AND "gps_followupgroupmembership"."ended_at" IS NULL
                 AND "gps_followupgroupmembership"."is_active")
          GROUP BY "gps_followupgroupmembership"."id",
                   "gps_followupgroup"."id",
                   T6."id",
                   "users_user"."id"
          ORDER BY "gps_followupgroupmembership"."created_at" DESC
          LIMIT 3
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[gps/includes/memberships_results.html]',
          'IncludeNode[gps/group_list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[gps/group_list.html]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "col1",
                 "col2",
                 "col3",
                 "col4",
                 "col5",
                 "col6",
                 "col7",
                 "col8",
                 "col9",
                 "col10",
                 "col11"
          FROM
            (SELECT *
             FROM
               (SELECT "gps_followupgroupmembership"."id" AS "col1",
                       "gps_followupgroupmembership"."is_referent" AS "col2",
                       "gps_followupgroupmembership"."is_active" AS "col3",
                       "gps_followupgroupmembership"."created_at" AS "col4",
                       "gps_followupgroupmembership"."created_in_bulk" AS "col5",
                       "gps_followupgroupmembership"."last_contact_at" AS "col6",
                       "gps_followupgroupmembership"."ended_at" AS "col7",
                       "gps_followupgroupmembership"."updated_at" AS "col8",
                       "gps_followupgroupmembership"."follow_up_group_id" AS "col9",
                       "gps_followupgroupmembership"."member_id" AS "col10",
                       "gps_followupgroupmembership"."creator_id" AS "col11",
                       ROW_NUMBER() OVER (PARTITION BY "gps_followupgroupmembership"."follow_up_group_id"
                                          ORDER BY RANDOM() ASC) AS "qual0",
                       RANDOM() AS "qual1"
                FROM "gps_followupgroupmembership"
                WHERE ("gps_followupgroupmembership"."is_referent"
                       AND "gps_followupgroupmembership"."follow_up_group_id" IN (%s,
                                                                                  %s,
                                                                                  %s))
                ORDER BY RANDOM() ASC) "qualify"
             WHERE ("qual0" > %s
                    AND "qual0" <= %s)) "qualify_mask"
          ORDER BY "qual1" ASC
        ''',
      }),
      dict({
        'origin': list([
          'VariableNode[gps/includes/memberships_results.html]',
          'IfNode[gps/includes/memberships_results.html]',
          'ForNode[gps/includes/memberships_results.html]',
          'IfNode[gps/includes/memberships_results.html]',
          'IncludeNode[gps/group_list.html]',
          'BlockNode[layout/base.html]',
          'ExtendsNode[gps/group_list.html]',
          'group_list[www/gps/views.py]',
          '_check_user_view_wrapper[utils/auth.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: test_group_list[test_my_groups__group_card]
  '''
  <div aria-labelledby="results" class="mt-3 mt-md-4" id="follow-up-groups-section">
      
          <div class="table-responsive">
              <table class="table table-hover">
                  <caption class="visually-hidden">Liste des bénéficiaires</caption>
                  <thead>
                      <tr>
                          <th scope="col">Prénom Nom</th>
                          <th scope="col">Accompagné depuis</th>
                          <th aria-label="Référent ou référente" scope="col">Référent⸱e</th>
                          <th aria-label="Nombre d’intervenants" scope="col">Nbr d’intervenants</th>
                      </tr>
                  </thead>
                  <tbody>
                      
                          <tr>
                              <td>
                                  <a aria-label="Consulter la fiche de Jean BON" class="btn-link" data-matomo-action="clic" data-matomo-category="GPS_liste_groupes" data-matomo-event="true" data-matomo-option="consulter_fiche_candidat" href="/gps/details/[Public ID of beneficiary]?back_url=/gps/groups/list">
                                      Jean BON
                                  </a>
                              </td>
                              <td>
                                  juin 2024 – <strong>moins d’un mois</strong>
                              </td>
                              <td>
                                  
                              </td>
                              <td>1</td>
                          </tr>
                      
                          <tr>
                              <td>
                                  <a aria-label="Consulter la fiche de François LE FRANÇAIS" class="btn-link" data-matomo-action="clic" data-matomo-category="GPS_liste_groupes" data-matomo-event="true" data-matomo-option="consulter_fiche_candidat" href="/gps/details/[Public ID of beneficiary]?back_url=/gps/groups/list">
                                      François LE FRANÇAIS
                                  </a>
                              </td>
                              <td>
                                  juin 2024 – <strong>moins d’un mois</strong>
                              </td>
                              <td>
                                  
                                      <span class="badge badge-xs rounded-pill bg-accent-03-lighter text-primary">vous êtes référent</span>
                                  
                              </td>
                              <td>1</td>
                          </tr>
                      
                          <tr>
                              <td>
                                  <a aria-label="Consulter la fiche de Jane DOE" class="btn-link" data-matomo-action="clic" data-matomo-category="GPS_liste_groupes" data-matomo-event="true" data-matomo-option="consulter_fiche_candidat" href="/gps/details/[Public ID of beneficiary]?back_url=/gps/groups/list">
                                      Jane DOE
                                  </a>
                              </td>
                              <td>
                                  juin 2024 – <strong>moins d’un mois</strong>
                              </td>
                              <td>
                                  
                                      John DOE
                                  
                              </td>
                              <td>2</td>
                          </tr>
                      
                  </tbody>
              </table>
          </div>
  
          
  
  
  
  
      
  </div>
  '''
# ---
